--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half"></i>
             </div>
-            <a href="https://www.youtube.com/playlist?list=PL_sKJ-sbj7lNsSe9vDgUbrX60kNqrYcrm" class="title">Mathematics | Book 4A & 4B</a>
-            <a href="https://classroom.google.com/u/0/c/NTI1OTEzNTM5MDk5" class="paragraph">classroom</a>
+            <a href="#" class="title">Mathematics | Book 4A & 4B</a>
+            <a href="#" class="paragraph">classroom</a>
             <!-- <phref="https://classroom.google.com/u/0/c/NTI1OTEzNTM5MDk5" class="title">Google classroom</phref> -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div class="info">
